# Scalar

./: .gitignore  README.md  main.py  pyproject.toml
deploy/: Caddyfile  DEPLOY.md  install-caddy.sh  scalar.service
docs/: scalar.yml.example
docs/plans/: 2026-03-10-incremental-review-design.md
scripts/: rag_admin.py
src/: buggy.py  config.py  github_app.py  rag.py  scala.py  scalar.py
